# orphos

./: .gitignore  Cargo.toml  README.md  config.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  pre-release.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml  quality.yml  release.yml
orphos-cli/: Cargo.toml  README.md
orphos-cli/benches/: criterion_config.rs  prodigal_benchmarks.rs
orphos-cli/src/: main.rs
orphos-cli/tests/: format_gbk.rs  format_gff.rs  golden_outputs.rs  single_genomes_equivalence.rs
orphos-cli/tests/common/: mod.rs
orphos-cli/tests/data/single/: NC_001318.1.fasta  NC_008512.1.fasta  fragment.fasta  fragment2.fasta
orphos-cli/tests/snapshots/: golden_outputs__cli_help.snap  golden_outputs__ecoli_gff_head.snap  single_genomes_equivalence__single_genomes_gff_summary.snap
orphos-core/: Cargo.toml  README.md
orphos-core/src/: config.rs  constants.rs  engine.rs  lib.rs  results.rs  types.rs
orphos-core/src/algorithms/: mod.rs
orphos-core/src/algorithms/dynamic_programming/: gene_prediction.rs  mod.rs  overlap_resolution.rs  path_optimization.rs
orphos-core/src/algorithms/dynamic_programming/scoring/: connection_types.rs  handlers.rs  mod.rs
orphos-core/src/algorithms/gene_finding/: annotation.rs  creation.rs  mod.rs  optimization.rs  scoring.rs
orphos-core/src/bitmap/: mod.rs
orphos-core/src/metagenomic/: mod.rs  presets.rs
orphos-core/src/node/: creation.rs  dicodon.rs  management.rs  mod.rs  motifs.rs  overlaps.rs  record_gc_bias.rs  scoring.rs  utilities.rs  validation.rs
orphos-core/src/output/: mod.rs
orphos-core/src/output/formats/: gbk.rs  gca.rs  gff.rs  sco.rs
orphos-core/src/sequence/: encoded.rs  io.rs  mod.rs  processing.rs
orphos-core/src/training/: common.rs  mod.rs  non_sd_training.rs  sd_training.rs
orphos-python/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_bindings.py
orphos-python/examples/: basic_usage.py  file_processing.py  minimal.py
orphos-python/python/: __init__.py
orphos-python/src/: lib.rs
orphos-wasm/: .gitignore  Cargo.toml  build.sh  package-lock.json  package.json
orphos-wasm/src/: lib.rs
orphos-wasm/www/: app.js  example.fasta  index.html  manifest.json  robots.txt  sitemap.xml  style.css
