[package]
name = "prodigal-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Orphos gene finder"
license = "GPL-3.0-or-later"
repository = "https://github.com/FullHuman/orphos"

[lib]
name = "prodigal"
crate-type = ["cdylib"]

[dependencies]
prodigal-core = { path = "../prodigal-core" }
pyo3 = { version = "0.27.1", features = ["extension-module"] }
bio = "2.3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
