[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "orphos"
version = "0.1.0"
description = "Python bindings for Orphos - a gene prediction tool for microbial genomes"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Orphos Contributors" }
]
keywords = ["bioinformatics", "genomics", "gene-prediction", "orphos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/FullHuman/orphos"
Repository = "https://github.com/FullHuman/orphos"

[tool.maturin]
module-name = "orphos"
python-source = "python"
features = ["pyo3/extension-module"]
