[package]
name = "orphos-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Orphos gene finder"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orphos-core = { path = "../orphos-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
bio = "1.6"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
